Bug 39023 - Regression: Formulas lost when opening XLSX file
Summary: Regression: Formulas lost when opening XLSX file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.1 release
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.5 target:3.4.2
Keywords:
: 39148 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-07 00:32 UTC by Vlad Lungeanu
Modified: 2011-12-23 14:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple XLSX file with a few sums (8.83 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2011-07-07 00:32 UTC, Vlad Lungeanu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vlad Lungeanu 2011-07-07 00:32:46 UTC
Created attachment 48841 [details]
Simple XLSX file with a few sums

When opening an XLSX file in LibreOffice 3.4 or 3.4.1, all formulas are lost, being replaced with their values or with #NAME errors.

The same XLS file opens perfectly in LibreOffice 3.3.3

System: Kubuntu 11.04, 32 bit
LibreOffice: 3.4.0 and 3.4.1, installed from DEBS from www.libreoffice.org
Comment 1 Markus Mohrhard 2011-07-07 19:28:41 UTC
After a quick look into the document the problem are cells containing:
t="shared" ref="H3:H9"

Let me have a look if I can fix it for 3.4.2
Comment 2 Vlad Lungeanu 2011-07-07 22:28:53 UTC
> Let me have a look if I can fix it for 3.4.2

Great, thank you!
Comment 3 Markus Mohrhard 2011-07-11 12:32:44 UTC
*** Bug 39148 has been marked as a duplicate of this bug. ***
Comment 4 Markus Mohrhard 2011-07-11 20:34:30 UTC
first part sent to the mailing list for review

we have two problems here:
-cell that contains shared formula was not set correctly (fixed with this patch)
-all other cells didn't get a formula but only the value
Comment 5 Markus Mohrhard 2011-07-19 11:51:08 UTC
thanks to muthu the second part is fixed too, will be in 3.4.2RC2
Comment 6 gibi 2011-07-24 05:11:36 UTC
Tested in LibO 3.4.2rc2 Linux X64 : OK
Thanks a lot! :-)