fix for fdo#39023: shared formulas are not imported correctly

Signed-off-by: Kohei Yoshida <kyoshida@novell.com>